feat(tabbed-container): support background colors
